            DT[,newcolname:=3.14,with=FALSE]
        
        This implements FR#1499 'Introduce function for efficient
        removal of a vector of column names' by Timothee Carayol,
        plus more because you can add new columns, and assign to
        multiple columns this way, too. We still plan to allow
        multiple := without needing with=FALSE in future.
        
        
    o   setkey(DT,...) now returns DT (invisibly) rather than NULL.
        This is to allow compound statements; e.g.,
            setkey(DT,x)["a"]


BUG FIXES

    o   DT[,z:=a/b] and DT[a>3,z:=a/b] work again, where a and
        b are columns of DT. Thanks to Chris Neff for reporting,
        and his patience.
        
    o   Numeric columns with class attributes are now correctly
        coerced to integer by setkey and ad hoc by. The error
        similar to 'fractional data is being truncated' should now
        only occur when that really is true. A side effect of
        this is that ad hoc by and setkey now work on IDate columns
        which have somehow become numeric; e.g. via rbind(DF,DF)
        as reported by Chris Neff.
        
        
USER VISIBLE CHANGES

    o   setkey's verbose messages expanded.


        *********************************************
        **                                         **
        **   CHANGES IN DATA.TABLE VERSION 1.6.4   **
        **                                         **
        *********************************************

NEW FEATURES

    o   DT[colA>3,which=TRUE] now returns row numbers rather
        than a logical vector, for consistency.

BUG FIXES

    o   Changing a keyed column name now updates the key, too,
        so an invalid key no longer arises, fixing #1495.
        Thanks to Chris Neff for reporting.
        
    o   := already warned when a numeric RHS is coerced to
        match an integer column's type. Now it also warns when
        numeric is coerced to logical, and integer is coerced